Add dump/load endpoints
