# server/swagger_server/swagger/swagger.yaml
@@ -9,20 +9,64 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "lobo.local:8080"
+host: "lobo.local"
 basePath: "/api"
 tags:
 - name: "admins"
   description: "Secured Admin-only calls"
-- name: "developers"
-  description: "Operations available to regular developers"
+- name: "users"
+  description: "Operations available to regular users"
 schemes:
+- "https"
 - "http"
 paths:
+  /admin:
+    get:
+      tags:
+      - "admins"
+      summary: "dump the database as a json object"
+      description: "dump the database as a json object"
+      operationId: "dump_db"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "Database dumped"
+          schema:
+            $ref: "#/definitions/admin"
+        400:
+          description: "invalid dump"
+      x-swagger-router-controller: "swagger_server.controllers.admins_controller"
+    post:
+      tags:
+      - "admins"
+      summary: "load set of IDs records from json object"
+      description: "load set of IDs records from json object"
+      operationId: "load_db"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "IdentityItems"
+        description: "Collection of Identity items to add"
+        required: false
+        schema:
+          type: "array"
+          items:
+            $ref: "#/definitions/id"
+      responses:
+        201:
+          description: "Identity created"
+        400:
+          description: "invalid input, object invalid"
+      x-swagger-router-controller: "swagger_server.controllers.admins_controller"
   /ID:
     get:
       tags:
-      - "developers"
+      - "users"
       summary: "get an existing identity"
       description: "By passing a user ID tag, get the associated identity (username,\
         \ password)"
@@ -42,11 +86,11 @@ paths:
             $ref: "#/definitions/id"
         400:
           description: "bad input parameter"
-      x-swagger-router-controller: "swagger_server.controllers.developers_controller"
+      x-swagger-router-controller: "swagger_server.controllers.users_controller"
     post:
       tags:
-      - "developers"
-      summary: "Add a new identity"
+      - "users"
+      summary: "Add a new identiy"
       description: "Adds an new ID tag & identity"
       operationId: "post_identity"
       consumes:
@@ -57,7 +101,7 @@ paths:
       - in: "body"
         name: "IdentityItem"
         description: "Identity item to add"
-        required: true
+        required: false
         schema:
           $ref: "#/definitions/id"
       responses:
@@ -67,10 +111,10 @@ paths:
           description: "invalid input, object invalid"
         409:
           description: "an existing item already exists"
-      x-swagger-router-controller: "swagger_server.controllers.developers_controller"
+      x-swagger-router-controller: "swagger_server.controllers.users_controller"
     put:
       tags:
-      - "developers"
+      - "users"
       summary: "Update new identiy"
       description: "Update and existing ID tag & identity"
       operationId: "put_identity"
@@ -81,8 +125,8 @@ paths:
       parameters:
       - in: "body"
         name: "IdentityItem"
-        description: "Identity item to modify"
-        required: true
+        description: "Identity item to add"
+        required: false
         schema:
           $ref: "#/definitions/id"
       responses:
@@ -91,11 +135,11 @@ paths:
         400:
           description: "invalid input, object invalid"
         409:
-          description: "item does not exist"
-      x-swagger-router-controller: "swagger_server.controllers.developers_controller"
+          description: "an existing item already exists"
+      x-swagger-router-controller: "swagger_server.controllers.users_controller"
     delete:
       tags:
-      - "admins"
+      - "users"
       summary: "Delete an existing identiy"
       description: "Delete ID tag & identity"
       operationId: "delete_identity"
@@ -106,20 +150,32 @@ paths:
       parameters:
       - in: "body"
         name: "IdentityItem"
-        description: "Identity item to delete"
+        description: "Identity item to add"
         required: false
         schema:
           $ref: "#/definitions/id"
       responses:
         201:
-          description: "Identity successfully deleted"
+          description: "Identity succesfully deleted"
         400:
           description: "invalid input, object invalid"
-      x-swagger-router-controller: "swagger_server.controllers.admins_controller"
+      x-swagger-router-controller: "swagger_server.controllers.users_controller"
 definitions:
+  admin:
+    type: "object"
+    required:
+    - "data"
+    properties:
+      data:
+        type: "object"
+        example: {}
+        properties: {}
+    example:
+      data: {}
   id:
     type: "object"
     required:
+    - "id"
     - "password"
     - "username"
     properties:
